--- a/style.css
+++ b/style.css
@@ -1,232 +1,328 @@
 /* ----------Themes---------- */
 :root {
---primary-color: #b8d7ff;
---secondary-color: #55d871;
---text-color: #040404;
---bg-color: #ffffff;
+	--primary-color: #b8d7ff;
+	--secondary-color: #55d871;
+	--text-color: #040404;
+	--bg-color: #fff;
 }
-[data-theme="dark"] {
---primary-color: #7bdce8;
---secondary-color: #14d63e;
---text-color: #ffffff;
---bg-color: #000000;
+
+[data-theme='dark'] {
+	--primary-color: #7bdce8;
+	--secondary-color: #14d63e;
+	--text-color: #fff;
+	--bg-color: #000;
 }
+
 /* ----------Defaults---------- */
 html, body, .app {
-  margin: 0;
-  padding: 0;
-  width: 100vw;
-  height: 100vh;
+	width: 100vw;
+	height: 100vh;
+	margin: 0;
+	padding: 0;
 }
+
 body {
-  background-color: var(--bg-color);
-  color: var(--text-color);
-  font-family: Calibri, sans-serif;
+	font-family: Calibri, sans-serif;
+
+	color: var(--text-color);
+	background-color: var(--bg-color);
 }
+
 div, h1, p {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
+
 a, a:visited {
-  color: #0000dd;
-  text-decoration: none;
+	text-decoration: none;
+
+	color: #00d;
 }
+
 .app {
-  display: flex;
-  overflow-x: hidden;
-  flex-direction: column;
+	display: flex;
+	overflow-x: hidden;
+	flex-direction: column;
 }
+
 /* ----------Globals---------- */
 input, button {
-  border: 1px solid grey;
-  border-radius: 4px;
-  background-color: var(--bg-color);
-  color: var(--text-color);
+	color: var(--text-color);
+	border: 1px solid grey;
+	border-radius: 4px;
+	background-color: var(--bg-color);
 }
+
 [data-theme='dark'] input::placeholder {
-  color: #b5b5b5;
+	color: #b5b5b5;
 }
+
 button {
-  cursor: pointer;
+	cursor: pointer;
 }
+
 .sortable-ghost {
-	opacity: 0.3;
+	opacity: .3;
 }
+
 /* ----------Timer---------- */
 .timer {
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  margin-top: 40px;
-  padding: 10px;
-  width: max-content;
+	display: flex;
+	flex-direction: column;
+
+	width: max-content;
+	margin: 0 auto;
+	margin-top: 40px;
+	padding: 10px;
 }
+
 /* ----------Timer Display---------- */
 .timer-display {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 10px;
-  text-align: center;
+	display: flex;
+	flex-direction: column;
+
+	margin-bottom: 10px;
+
+	text-align: center;
 }
+
 .timer-time {
-  font-size: 28px;
+	font-size: 28px;
 }
+
 .timer-main {
-  font-size: 68px;
+	font-size: 68px;
 }
+
 .timer-sub {
-  font-size: 38px;
+	font-size: 38px;
 }
+
 /* ----------Timer Controls---------- */
 .timer-controls {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin-bottom: 10px;
+	display: flex;
+	flex-direction: row;
+
+	margin-bottom: 10px;
+
+	justify-content: center;
 }
+
 .timer-controls > * {
-  margin: 0 4px;
-  padding: 4px;
-  font-size: 18px;
+	font-size: 18px;
+
+	margin: 0 4px;
+	padding: 4px;
 }
+
+.timer-controls button {
+	min-width: 40px;
+}
+
 .timer-controls button:hover {
-  background-color: var(--secondary-color);
-  color: white;
+	color: white;
+	background-color: var(--secondary-color);
 }
+
 .timer-controls input[type='checkbox'] {
-  margin: auto 4px;
-  width: 20px;
-  height: 20px;
+	width: 20px;
+	height: 20px;
+	margin: auto 4px;
 }
+
+#start {
+	background-image: url('icons/play.png');
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-origin: content-box;
+	background-position: center;
+}
+#start.true {
+	background-image: url('icons/stop.png');
+}
+
+#loop {
+	content: url('icons/noloop');
+}
+#loop.true {
+	content: url('icons/loop');
+}
+
 /* ----------Timer List---------- */
 .timer-list {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
+
 .timer-row {
-  display: flex;
-  flex: 1;
-  flex-direction: row;
-  justify-content: space-around;
-  margin: 8px 0;
-  padding: 4px 2px;
-  /* padding-left: 20px; */
-  border-radius: 6px;
-  /* background-color: var(--primary-color); */
-  color: black;
-  font-size: 20px;
-  user-select: none;
-  box-shadow: 0px 1px 6px #00000055;
+	font-size: 20px;
+
+	display: flex;
+	flex-direction: row;
+
+	margin: 8px 0;
+	padding: 4px 2px;
+
+	user-select: none;
+	/* background-color: var(--primary-color); */
+
+	color: black;
+	/* padding-left: 20px; */
+	border-radius: 6px;
+	box-shadow: 0 1px 6px #00000055;
+
+	flex: 1;
+	justify-content: space-around;
 }
+
 .timer-row.done {
-  opacity: 0.6;
-  filter: grayscale(1);
+	opacity: .6;
+
+	filter: grayscale(1);
 }
+
 .timer-row.highlight {
-  background-color: var(--secondary-color);
+	background-color: var(--secondary-color);
 }
+
 .row-section {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
+
 .row-options {
-  display: flex;
-  flex-direction: row;
+	display: flex;
+	flex-direction: row;
 }
+
 .row-options > * {
-  margin: 0 4px;
-  border: none;
+	margin: 0 4px;
+
+	border: none;
 }
+
 #timer-list .row-playMode {
 	display: none;
 }
+
 #timer-list .row-playMode {
 	display: none;
 }
+
 .timer-row input:hover, .timer-row button:hover {
-  background-color: var(--primary-color);
+	background-color: var(--primary-color);
 }
+
 .timer-row input[type='number'] {
-  padding: 4px;
-  width: 40px;
-  text-align: center;
-  margin: 0;
+	width: 40px;
+	margin: 0;
+	padding: 4px;
+
+	text-align: center;
 }
+
 .row-handle {
-  cursor: n-resize;
+	cursor: n-resize;
 }
+
 .row-go:hover {
-  background-color: var(--secondary-color);
-  color: white;
+	color: white;
+	background-color: var(--secondary-color);
 }
+
 .timer-row input[type='checkbox'] {
-  margin: auto 4px;
-  width: 20px;
-  height: 20px;
+	width: 20px;
+	height: 20px;
+	margin: auto 4px;
 }
+
 .row-label {
-  /* flex: 1; */
-  flex-shrink: 1;
-  padding: 4px;
+	padding: 4px;
+	/* flex: 1; */
+
+	flex-shrink: 1;
 }
+
 .row-hours {
-  border-radius: 6px 0 0 6px;
+	border-radius: 6px 0 0 6px;
 }
+
 .row-minutes {
-  border-radius: 0;
+	border-radius: 0;
 }
+
 .row-seconds {
-  border-radius: 0 6px 6px 0;
+	border-radius: 0 6px 6px 0;
 }
+
 .row-timer {
-  flex-grow: 1;
-  text-align: right;
+	text-align: right;
+
+	flex-grow: 1;
 }
+
 .row-add, .row-remove {
-  font-size: 20px;
+	font-size: 20px;
 }
+
 .row-remove {
-  /* background-color: red; */
-  background-color: transparent;
-  color: var(--text-color);
-  font-size: 17px;
+	font-size: 17px;
+
+	color: var(--text-color);
+	/* background-color: red; */
+	background-color: transparent;
 }
+
 .row-add {
-  margin: 0 auto;
-  width: 30%;
-  background-color: var(--secondary-color);
-  color: var(--text-color);
+	width: 30%;
+	margin: 0 auto;
+
+	color: var(--text-color);
+	background-color: var(--secondary-color);
 }
+
 /* ----------Theme Switch---------- */
 .theme {
-  position: fixed;
-  right: 10px;
-  bottom: 10px;
-  display: flex;
-  flex-direction: column;
-  user-select: none;
+	position: fixed;
+	right: 10px;
+	bottom: 10px;
+
+	display: flex;
+	flex-direction: column;
+
+	user-select: none;
 }
+
 .theme-title {
-  margin-bottom: 10px;
-  text-align: center;
-  font-size: 24px;
+	font-size: 24px;
+
+	margin-bottom: 10px;
+
+	text-align: center;
 }
+
 .theme-switch {
-  display: flex;
-  width: 80px;
-  height: 40px;
-  border-radius: 40px;
-  background-color: var(--text-color);
+	display: flex;
+
+	width: 80px;
+	height: 40px;
+
+	border-radius: 40px;
+	background-color: var(--text-color);
 }
+
 .theme-pill {
-  margin: auto 0;
-  margin-left: 2px;
-  width: 36px;
-  height: 36px;
-  border-radius: 100%;
-  background-color: var(--bg-color);
+	width: 36px;
+	height: 36px;
+	margin: auto 0;
+	margin-left: 2px;
+
+	border-radius: 100%;
+	background-color: var(--bg-color);
 }
+
 .theme-switch.dark .theme-pill {
-  margin: auto 0;
-  margin-left: 42px;
+	margin: auto 0;
+	margin-left: 42px;
 }
+
