fix comment error

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 --bg-color: #000;
 }
 
-----------Defaults----------
+/* ----------Defaults---------- */
 html, body, .app {
   margin: 0;
   padding: 0;
