--- a/style.css
+++ b/style.css
@@ -83,10 +83,10 @@ button {
 .timer {
 	display: flex;
 	flex-direction: column;
-	margin: 0 auto;
+	/* margin: 0 auto; */
 	margin-top: 40px;
-	padding: 10px;
-	width: max-content;
+	/* padding: 10px; */
+	/* width: max-content; */
 }
 
 /* ----------Timer Display---------- */
@@ -95,6 +95,7 @@ button {
 	flex-direction: column;
 	margin-bottom: 10px;
 	text-align: center;
+	width: 100%;
 }
 
 .timer-time {
@@ -196,13 +197,15 @@ button {
 .timer-list {
 	display: flex;
 	flex-direction: column;
+	width: max-content;
+	margin: 0 auto;
 }
 
 .timer-row {
 	display: flex;
-	flex: 1;
+	/* flex: 1; */
 	flex-direction: row;
-	justify-content: space-around;
+	/* justify-content: space-around; */
 	margin: 8px 0;
 	padding: 4px 2px;
 	/* padding-left: 20px; */
@@ -212,46 +215,20 @@ button {
 	color: black;
 	font-size: 20px;
 	overflow-y: hidden;
-	min-height: 35px;
+	/* min-height: 35px; */
 	max-height: 35px;
-
 	user-select: none;
+	background-color: #ddd1ff;
 }
 
 .timer-row.done {
 	opacity: 0.6;
 	filter: grayscale(1);
+	background-color: silver;
 }
 
 .timer-row.highlight {
 	background-color: var(--secondary-color);
-}
-
-.row-section {
-	display: flex;
-	flex-direction: column;
-}
-
-.row-options {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-evenly;
-	margin: 6px;
-}
-
-.row-options>* {
-	/* margin: 0 6px; */
-	border: none;
-}
-
-.row-controls {
-	margin-top: -1px;
-	/* 	transition: margin-top 250ms cubic-bezier(0.71, 0.04, 0.36, 1.01); */
-	transition: margin-top 200ms ease;
-}
-
-#timer-list.play .row-controls {
-	margin-top: -37px;
 }
 
 .timer-row button {
@@ -267,11 +244,42 @@ button {
 	background-color: var(--primary-color);
 }
 
+.timer-row input {
+	padding: 4px;
+}
+
 .timer-row input[type='number'] {
 	margin: 0;
-	padding: 4px;
 	width: 40px;
 	text-align: center;
+}
+
+.row-section {
+	display: flex;
+	flex-direction: column;
+}
+
+.row-options {
+	display: flex;
+	flex-direction: row;
+	/* justify-content: space-evenly; */
+	margin: 6px 0;
+	min-height: 28px;
+}
+
+.row-options>* {
+	margin: 0 2px;
+	border: none;
+}
+
+.row-controls {
+	margin-top: -2px;
+	/* 	transition: margin-top 250ms cubic-bezier(0.71, 0.04, 0.36, 1.01); */
+	transition: margin-top 200ms ease;
+}
+
+#timer-list.play .row-controls {
+	margin-top: -42px;
 }
 
 .row-handle {
@@ -282,6 +290,27 @@ button {
 
 .row-handle:active {
 	cursor: grabbing;
+}
+
+.row-hours {
+	margin-left: 2px !important;
+	border-radius: 6px 0 0 6px;
+}
+
+.row-minutes {
+	border-radius: 0;
+}
+
+.row-seconds {
+	margin-right: 2px !important;
+	border-radius: 0 6px 6px 0;
+}
+
+.row-mode {
+	background-image: url('icons/timer.png');
+}
+.row-mode.true {
+	background-image: url('icons/date.png');
 }
 
 .row-go {
@@ -299,44 +328,25 @@ button {
 }
 
 .row-label {
-	flex: 1;
+	/* flex: 1; */
 	padding: 4px;
-}
-
-.row-hours {
-	border-radius: 6px 0 0 6px;
-}
-
-.row-minutes {
-	border-radius: 0;
-}
-
-.row-seconds {
-	border-radius: 0 6px 6px 0;
-}
-
-.row-mode {
-	background-image: url('icons/timer.png');
-}
-
-.row-mode.true {
-	background-image: url('icons/date.png');
+	min-width: 210px;
 }
 
 .row-timer {
 	flex-grow: 1;
-	text-align: right;
+	margin: 0 8px;
+	text-align: center;
 }
 
 .row-add,
 .row-remove {
-	font-size: 20px;
+	color: var(--text-color);
 }
 
 .row-remove {
 	/* background-color: red; */
 	background-color: transparent;
-	color: var(--text-color);
 	font-size: 17px;
 }
 
@@ -344,7 +354,7 @@ button {
 	margin: 0 auto;
 	width: 30%;
 	background-color: var(--secondary-color);
-	color: var(--text-color);
+	font-size: 20px;
 }
 
 /* ----------Theme Switch---------- */
