--- a/style.css
+++ b/style.css
@@ -14,384 +14,378 @@
 }
 
 /* ----------Defaults---------- */
-html,
-body,
-.app {
-	margin: 0;
-	padding: 0;
-	width: 100vw;
-	height: 100vh;
+html, body, .app {
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
 }
 
 body {
-	background-color: var(--bg-color);
-	color: var(--text-color);
-	font-family: Calibri, sans-serif;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  font-family: Calibri, sans-serif;
 }
 
-div,
-h1,
-p {
-	margin: 0;
-	padding: 0;
+div, h1, p {
+  margin: 0;
+  padding: 0;
 }
 
-a,
-a:visited {
-	color: #0000dd;
-	text-decoration: none;
+a, a:visited {
+  color: #0000dd;
+  text-decoration: none;
 }
 
 .app {
-	display: flex;
-	overflow-x: hidden;
-	flex-direction: column;
+  display: flex;
+  overflow-x: hidden;
+  flex-direction: column;
 }
 
 /* ----------Globals---------- */
-input,
-button {
-	border: 1px solid grey;
-	border-radius: 4px;
-	background-color: var(--bg-color);
-	color: var(--text-color);
+input, button {
+  border: 1px solid grey;
+  border-radius: 4px;
+  background-color: var(--bg-color);
+  color: var(--text-color);
 }
 
 [data-theme='dark'] input::placeholder {
-	color: #b5b5b5;
+  color: #b5b5b5;
 }
 
 button {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .sortable-ghost {
-	opacity: 0.3;
+  opacity: 0.3;
 }
 
 [data-theme='dark'] .white-icon {
-	background-color: white;
-	color: black;
-	filter: invert(1);
+  background-color: white;
+  color: black;
+  filter: invert(1);
 }
 
 [data-theme='dark'] .white-icon:hover {
-	filter: invert(0);
+  filter: invert(0);
 }
 
 /* ----------Timer---------- */
 .timer {
-	display: flex;
-	flex-direction: column;
-	/* margin: 0 auto; */
-	margin-top: 40px;
-	/* padding: 10px; */
-	/* width: max-content; */
+  display: flex;
+  flex-direction: column;
+  /* margin: 0 auto; */
+  margin-top: 40px;
+  /* padding: 10px; */
+  /* width: max-content; */
 }
 
 /* ----------Timer Display---------- */
 .timer-display {
-	display: flex;
-	flex-direction: column;
-	margin-bottom: 10px;
-	text-align: center;
-	width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  margin-bottom: 10px;
+  width: max-content;
+  text-align: center;
 }
 
 .timer-time {
-	font-size: 28px;
+  font-size: 28px;
 }
 
 .timer-main {
-	font-size: 68px;
+  font-size: 68px;
 }
 
 .timer-sub {
-	font-size: 38px;
+  font-size: 38px;
 }
 
 /* ----------Timer Controls---------- */
 .timer-controls {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 10px;
 }
 
-.timer-controls>* {
-	margin: 0 4px;
-	padding: 4px;
-	font-size: 18px;
+.timer-controls > * {
+  margin: 0 4px;
+  padding: 4px;
+  font-size: 18px;
 }
 
 .timer-controls button {
-	min-width: 40px;
-	background-position: center;
-	background-origin: content-box;
-	background-size: contain;
-	background-repeat: no-repeat;
+  min-width: 40px;
+  background-position: center;
+  background-origin: content-box;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .timer-controls button:hover {
-	background-color: var(--primary-color);
+  background-color: var(--primary-color);
 }
 
-#displayMode,
-#editMode {
-	padding-right: 30px;
+#displayMode, #editMode {
+  padding-right: 30px;
 }
 
 #play {
-	background-image: url('icons/play.png');
+  background-image: url('icons/play.png');
 }
 
 #play.true {
-	background-image: url('icons/stop.png');
+  background-image: url('icons/stop.png');
 }
 
 #pause {
-	background-image: url('icons/pause.png');
+  background-image: url('icons/pause.png');
 }
 
 #pause.true {
-	background-color: var(--secondary-color);
+  background-color: var(--secondary-color);
 }
 
 #clear {
-	background-image: url('icons/clear.png');
+  background-image: url('icons/clear.png');
 }
 
 #loop {
-	background-image: url('icons/noloop.png');
-	/* opacity: 0.4; */
+  background-image: url('icons/noloop.png');
+  /* opacity: 0.4; */
 }
 
 #loop.true {
-	background-image: url('icons/loop.png');
-	opacity: 1;
+  background-image: url('icons/loop.png');
+  opacity: 1;
 }
 
 #displayMode {
-	background-image: url('icons/timer.png');
-	background-position: 212% 0;
-	width: 80px;
+  width: 80px;
+  background-image: url('icons/timer.png');
+  background-position: 212% 0;
 }
 
 #displayMode.true {
-	background-image: url('icons/clock2.png');
-	background-position: 207% 0;
+  background-image: url('icons/clock2.png');
+  background-position: 207% 0;
 }
 
 #editMode {
-	background-image: url('icons/edit2.png');
-	background-position: 340% 0;
-	width: 68px;
+  width: 68px;
+  background-image: url('icons/edit2.png');
+  background-position: 340% 0;
 }
 
 #editMode.true {
-	background-image: url('icons/play.png');
-	background-position: 348% 0;
+  background-image: url('icons/play.png');
+  background-position: 348% 0;
 }
 
 /* ----------Timer List---------- */
 .timer-list {
-	display: flex;
-	flex-direction: column;
-	width: max-content;
-	margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  width: max-content;
 }
 
 .timer-row {
-	display: flex;
-	/* flex: 1; */
-	flex-direction: row;
-	/* justify-content: space-around; */
-	margin: 8px 0;
-	padding: 4px 2px;
-	/* padding-left: 20px; */
-	border-radius: 6px;
-	box-shadow: 0 1px 6px #00000055;
-	/* background-color: var(--primary-color); */
-	color: black;
-	font-size: 20px;
-	overflow-y: hidden;
-	/* min-height: 35px; */
-	max-height: 35px;
-	user-select: none;
-	background-color: #ddd1ff;
+  display: flex;
+  overflow-y: hidden;
+  /* flex: 1; */
+  flex-direction: row;
+  /* justify-content: space-around; */
+  margin: 8px 0;
+  padding: 4px 2px;
+  /* min-height: 35px; */
+  max-height: 35px;
+  /* padding-left: 20px; */
+  border-radius: 6px;
+  background-color: #ddd1ff;
+  box-shadow: 0 1px 6px #00000055;
+  /* background-color: var(--primary-color); */
+  color: black;
+  font-size: 20px;
+
+  user-select: none;
 }
 
 .timer-row.done {
-	opacity: 0.6;
-	filter: grayscale(1);
-	background-color: silver;
+  background-color: silver;
+  opacity: 0.6;
+  filter: grayscale(1);
 }
 
 .timer-row.highlight {
-	background-color: var(--secondary-color);
+  background-color: var(--secondary-color);
 }
 
 .timer-row button {
-	min-width: 40px;
-	background-position: center;
-	background-origin: content-box;
-	background-size: contain;
-	background-repeat: no-repeat;
+  min-width: 40px;
+  background-position: center;
+  background-origin: content-box;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
-.timer-row input:hover,
-.timer-row button:hover {
-	background-color: var(--primary-color);
+.timer-row input:hover, .timer-row button:hover {
+  background-color: var(--primary-color);
 }
 
 .timer-row input {
-	padding: 4px;
+  padding: 4px;
 }
 
 .timer-row input[type='number'] {
-	margin: 0;
-	width: 40px;
-	text-align: center;
+  margin: 0;
+  width: 40px;
+  text-align: center;
 }
 
 .row-section {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .row-options {
-	display: flex;
-	flex-direction: row;
-	/* justify-content: space-evenly; */
-	margin: 6px 0;
-	min-height: 28px;
+  display: flex;
+  flex-direction: row;
+  /* justify-content: space-evenly; */
+  margin: 6px 0;
+  min-height: 28px;
 }
 
-.row-options>* {
-	margin: 0 2px;
-	border: none;
+.row-options > * {
+  margin: 0 2px;
+  border: none;
 }
 
 .row-controls {
-	margin-top: -2px;
-	/* 	transition: margin-top 250ms cubic-bezier(0.71, 0.04, 0.36, 1.01); */
-	transition: margin-top 200ms ease;
+  margin-top: -2px;
+  /* 	transition: margin-top 250ms cubic-bezier(0.71, 0.04, 0.36, 1.01); */
+  transition: margin-top 200ms ease;
 }
 
 #timer-list.play .row-controls {
-	margin-top: -42px;
+  margin-top: -42px;
 }
 
 .row-handle {
-	margin: auto;
-	/* cursor: n-resize; */
-	cursor: grab;
+  margin: auto;
+  /* cursor: n-resize; */
+  cursor: grab;
 }
 
 .row-handle:active {
-	cursor: grabbing;
+  cursor: grabbing;
 }
 
 .row-hours {
-	margin-left: 2px !important;
-	border-radius: 6px 0 0 6px;
+  margin-left: 2px !important;
+  border-radius: 6px 0 0 6px;
 }
 
 .row-minutes {
-	border-radius: 0;
+  border-radius: 0;
 }
 
 .row-seconds {
-	margin-right: 2px !important;
-	border-radius: 0 6px 6px 0;
+  margin-right: 2px !important;
+  border-radius: 0 6px 6px 0;
 }
 
 .row-mode {
-	background-image: url('icons/timer.png');
+  background-image: url('icons/timer.png');
 }
 .row-mode.true {
-	background-image: url('icons/date.png');
+  background-image: url('icons/date.png');
 }
 
 .row-go {
-	background-image: url('icons/play.png');
+  background-image: url('icons/play.png');
 }
 
 .row-ignore {
-	background-image: url('icons/ignore.png');
-	/* opacity: 0.4; */
+  background-image: url('icons/ignore.png');
+  /* opacity: 0.4; */
 }
 
 .row-ignore.true {
-	background-image: url('icons/ignore-true.png');
-	opacity: 1;
+  background-image: url('icons/ignore-true.png');
+  opacity: 1;
 }
 
 .row-label {
-	/* flex: 1; */
-	padding: 4px;
-	min-width: 210px;
+  /* flex: 1; */
+  padding: 4px;
+  min-width: 210px;
 }
 
 .row-timer {
-	flex-grow: 1;
-	margin: 0 8px;
-	text-align: center;
+  flex-grow: 1;
+  margin: 0 8px;
+  text-align: center;
 }
 
-.row-add,
-.row-remove {
-	color: var(--text-color);
+.row-add, .row-remove {
+  color: var(--text-color);
 }
 
 .row-remove {
-	/* background-color: red; */
-	background-color: transparent;
-	font-size: 17px;
+  /* background-color: red; */
+  background-color: transparent;
+  font-size: 17px;
 }
 
 .row-add {
-	margin: 0 auto;
-	width: 30%;
-	background-color: var(--secondary-color);
-	font-size: 20px;
+  margin: 10px auto;
+  width: 100px;
+  height: 34px;
+  background-color: var(--secondary-color);
+  font-size: 20px;
 }
 
 /* ----------Theme Switch---------- */
 .theme {
-	position: fixed;
-	right: 10px;
-	bottom: 10px;
-	display: flex;
-	flex-direction: column;
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  display: flex;
+  flex-direction: column;
 
-	user-select: none;
+  user-select: none;
 }
 
 .theme-title {
-	margin-bottom: 10px;
-	text-align: center;
-	font-size: 24px;
+  margin-bottom: 10px;
+  text-align: center;
+  font-size: 24px;
 }
 
 .theme-switch {
-	display: flex;
-	width: 80px;
-	height: 40px;
-	border-radius: 40px;
-	background-color: var(--text-color);
+  display: flex;
+  width: 80px;
+  height: 40px;
+  border-radius: 40px;
+  background-color: var(--text-color);
 }
 
 .theme-pill {
-	margin: auto 0;
-	margin-left: 2px;
-	width: 36px;
-	height: 36px;
-	border-radius: 100%;
-	background-color: var(--bg-color);
+  margin: auto 0;
+  margin-left: 2px;
+  width: 36px;
+  height: 36px;
+  border-radius: 100%;
+  background-color: var(--bg-color);
 }
 
 .theme-switch.dark .theme-pill {
-	margin: auto 0;
-	margin-left: 42px;
+  margin: auto 0;
+  margin-left: 42px;
 }
